Fixing jar pathing